# ChangeLog for dev-ruby/slop
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/slop/ChangeLog,v 1.28 2014/08/05 16:00:44 mrueg Exp $

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> slop-2.4.4-r1.ebuild,
  slop-3.5.0.ebuild:
  Remove trailing '.' from DESCRIPTION.

*slop-3.5.0-r1 (25 Jul 2014)

  25 Jul 2014; Manuel Rüger <mrueg@gentoo.org> +slop-3.5.0-r1.ebuild:
  Add ruby21 target. Thanks to longlene.

  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -slop-3.4.6-r1.ebuild,
  -slop-3.4.7.ebuild, slop-2.4.4-r1.ebuild:
  Remove ruby18 target. Cleanup old.

*slop-3.5.0 (27 Mar 2014)

  27 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +slop-3.5.0.ebuild:
  Version bump.

*slop-3.4.7 (17 Nov 2013)

  17 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +slop-3.4.7.ebuild:
  Version bump.

  11 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -slop-2.4.4.ebuild,
  -slop-3.3.3.ebuild, -slop-3.4.6.ebuild:
  Cleanup old.

*slop-3.4.6-r1 (09 Oct 2013)
*slop-2.4.4-r1 (09 Oct 2013)

  09 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +slop-2.4.4-r1.ebuild,
  +slop-3.4.6-r1.ebuild:
  Add ruby20 target. Original commit by Peter Wilmott in ruby-overlay.

  10 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -slop-3.4.3.ebuild,
  -slop-3.4.4.ebuild, -slop-3.4.5.ebuild:
  Cleanup old.

*slop-3.4.6 (29 Jul 2013)

  29 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +slop-3.4.6.ebuild:
  Version bump

*slop-3.4.5 (22 Jul 2013)

  22 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +slop-3.4.5.ebuild:
  Version bump

*slop-3.4.4 (20 Apr 2013)

  20 Apr 2013; Hans de Graaff <graaff@gentoo.org> +slop-3.4.4.ebuild:
  Version bump.

*slop-3.4.3 (19 Jan 2013)

  19 Jan 2013; Hans de Graaff <graaff@gentoo.org> +slop-3.4.3.ebuild:
  Version bump.

  19 Jan 2013; Hans de Graaff <graaff@gentoo.org> -slop-3.3.2.ebuild:
  Cleanup.

*slop-3.3.3 (23 Sep 2012)

  23 Sep 2012; Hans de Graaff <graaff@gentoo.org> +slop-3.3.3.ebuild:
  Version bump. Avoid implicit git dependency.
